[workspace]

members = [
    "keysas-core/",
    "keysas-io/",
    "keysas-backend/",
    "keysas-sign/",
    "keysas-fido/",
    "keysas_lib/",
    "keysas-admin/src-tauri"
]

exclude = [
    "keysas-firewall"
]

[patch.crates-io.loopdev]
git = "https://github.com/mulkieran/loopdev"
branch = "bump-bindgen-reduce-version"
