[package]
name = "keysas-backend"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tungstenite = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
log = "0.4.17"
anyhow = "*"
udev = "0.7.0"
regex = "1.7.0"
libc = "*"
nom = "7"
minisign = "0.7.2"
clap = { version = "4", default-features = false, features = ["std", "cargo"] }
crossbeam-utils = "*"
nix = "0.26.1"
tempfile = "*"
diacritics = "0.1.3"
sys-mount = "*"
proc-mounts = "0.3.0"
hex = "*"
kv = "*"
yubico_manager = "0.9.0"
walkdir = "*"
landlock = { git = "https://github.com/landlock-lsm/rust-landlock", branch = "main" }
flexi_logger = "0.24.2"

[dev-dependencies]
criterion = "0.4.0"
env_logger = "0.10.0"
input_buffer = "0.5.0"
socket2 = "0.4.7"
rand = "0.8.5"


[[bin]]
name = "keysas-backend"
path = "src/main.rs"
