[package]
name = "keysas-backend"
version = "2.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tungstenite = "0.26"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
anyhow = "1.0"
regex = "1"
libc = "0.2"
nom = "8"
nix = { version = "0.29", features = ["net"]}
landlock = "0.4" 
http = "1"

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11"
input_buffer = "0.5"
socket2 = "0.5"
rand = "0.8"

[[bin]]
name = "keysas-backend"
path = "src/main.rs"
