[package]
name = "keysas-core"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode ="1.3"
sha2 ="0.10"
serde_derive = "1.0"
serde = "1.0"
nix = "0.26"
keysas_lib = { path = "../keysas_lib" }
clap = { version = "4", default-features = false, features = ["std", "cargo"] }
log = "0.4"
regex = "1.7"
infer = "0.13"
clamav-tcp = "0.2"
yara = "0.17"
landlock = "0.2"
itertools ="0.10"
serde_json = "1.0"
syscallz = "0.16"
time = "0.3"
openssl = "0.10"

[[bin]]
name = "keysas-in"
path = "src/keysas-in/main.rs"

[[bin]]
name = "keysas-transit"
path = "src/keysas-transit/main.rs"

[[bin]]
name = "keysas-out"
path = "src/keysas-out/main.rs"

[profile.release]
lto = true
opt-level = 3
debug = false
