[package]
name = "keysas-core"
version = "2.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode ="1.3"
sha2 ="0.10"
serde_derive = "1.0"
serde = "1.0"
nix = { version = "0.29", features = ["fs"]}
keysas_lib = { path = "../keysas_lib" }
clap = { version = "4", default-features = false, features = ["std", "cargo"] }
log = "0.4"
regex = "1"
infer = "0.16"
clamav-tcp = "0.2"
itertools ="0.13"
serde_json = "1.0"
time = "0.3"
base64 = "0.22"
ed25519-dalek = "2"
rand = "0.8"
pkcs8 =  {version = "0.10", features = ["encryption", "pem"] }
x509-cert = "0.2"
landlock = "0.4"
syscallz = "0.17"
yara = "0.28"

[dependencies.oqs]
version = "0.9"
default-features = false
features = ["dilithium"]

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "keysas-in"
path = "src/keysas-in/main.rs"

[[bin]]
name = "keysas-transit"
path = "src/keysas-transit/main.rs"

[[bin]]
name = "keysas-out"
path = "src/keysas-out/main.rs"

[profile.release]
lto = true
opt-level = 3
debug = false
