[package]
name = "keysas-fido"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yubico_manager = "0.9.0"
rand="*"
clap = { version = "4", default-features = false, features = ["std", "cargo"] }
sled = "0.34.7"
anyhow = "*"
hex = "*"
kv = "*"
