[package]
name = "keysas-io"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tungstenite = "0.18"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
anyhow = "1.0"
udev = "0.7"
regex = "1.8"
libc = "*"
nom = "7"
minisign = "0.7"
clap = { version = "4", default-features = false, features = ["std", "cargo"] }
crossbeam-utils = "0.8"
nix = "0.26"
tempfile = "3.5"
diacritics = "0.2"
sys-mount = "2.0"
proc-mounts = "0.3"
hex = "0.4"
kv = "0.24"
yubico_manager = "0.9"
walkdir = "2.3"
landlock = "0.2" 
flexi_logger = "0.25"
keysas_lib = { path = "../keysas_lib" }
oqs = { version = "0.7", default-features = false, features =["dilithium"] }
ed25519-dalek = "1.0"

[dev-dependencies]
criterion = "0.4"
env_logger = "0.10"
input_buffer = "0.5"
socket2 = "0.5"
rand = "0.8"

[[bin]]
name = "keysas-io"
path = "src/main.rs"
