[package]
name = "keysas-io"
version = "2.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tungstenite = "0.26"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
anyhow = "1.0"
udev = "0.9"
regex = "1"
libc = "0.2"
clap = { version = "4", default-features = false, features = ["std", "cargo"] }
tempfile = "3.8"
diacritics = "0.2"
sys-mount = "3"
proc-mounts = "0.3"
hex = "0.4"
kv = "0.24"
yubico_manager = { git = "https://github.com/r3dlight/yubico-manager"}
walkdir = "2.4"
landlock = "0.4" 
keysas_lib = { path = "../keysas_lib" }
oqs = { version = "0.10", default-features = false, features =["dilithium"] }
ed25519-dalek = "2"
base64 = "0.22"
bytemuck = "1.4"

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11"
input_buffer = "0.5"
socket2 = "0.5"
rand = "0.8"

[[bin]]
name = "keysas-io"
path = "src/main.rs"
