[package]
name = "keysas-sign"
version = "2.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "cargo"] }
anyhow = "1.0"
ed25519-dalek = "2"
pkcs8 = { version = "0.10", features = ["encryption", "pem"]}
keysas_lib = { path = "../keysas_lib" }
tempfile = "3.8"
x509-cert = "0.2"
