[package]
name = "keysas_lib"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
anyhow = "1.0"
clap = "4.2"
walkdir = "2.3"
regex ="1.8.1"
simple_logger = "4.1"
log = "0.4"
pkcs8 = {version = "0.10", default-features = false, features = ["encryption", "pem"] }
x509-cert = "0.2"
arbitrary = "1.3"
ed25519-dalek = "1"
rand_dl = {package = "rand", version = "0.8"}
rand_core = "0.6.4"
hex-literal = "0.4"
tempfile = "3.5"
der = "0.7"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
time = "0.3"
base64 = "0.21"

[dependencies.oqs]
version = "0.7"
default-features = false
features = ["std", "dilithium"]
