[package]
name = "keysas_lib"
version = "2.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
anyhow = "1.0"
regex ="1"
simple_logger = "5"
log = "0.4"
pkcs8 = {version = "0.10", default-features = false, features = ["encryption", "pem"] }
x509-cert = "0.2"
ed25519-dalek = {version = "2", features = ["digest", "rand_core"] }
rand_dl = {package = "rand", version = "0.8"}
hex-literal = "1"
tempfile = "3"
der = "0.7"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
time = "0.3"
base64 = "0.22"

[dependencies.oqs]
version = "0.10"
default-features = false
features = ["dilithium"]
