[package]
name = "keysas-admin"
version = "0.1.2"
description = "Keysas stations administration application"
authors = ["Stephane N", "Luc Bonnafoux"]
license = "GPL-3.0"
repository = ""
default-run = "keysas-admin"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["api-all", "updater"] }
ssh-rs = "0.3.2" 
tauri-plugin-store = { git="https://github.com/r3dlight/tauri-plugin-store", branch="dev" }
anyhow = { version = "1.0", features = ["backtrace"] }
async-std = "1.12"
nom = "7.1"
sha2 ="0.10"
regex="1.7"
sqlite = "0.30"
simple_logger = "4.1"
log = "0.4"
pkcs8 = {version = "0.10", features = ["encryption", "pem"] }
x509-cert = "0.2"
arbitrary = "1.3"
ed25519-dalek = "1"
rand_dl = {package = "rand", version = "0.7"}
rand_core = "0.6.4"
oqs = "0.7"
hex-literal = "0.3"
keysas_lib = { path = "../../keysas_lib" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
