[package]
name = "keysas-admin"
version = "2.2.0"
description = "Keysas stations administration application"
authors = ["Stephane N", "Luc Bonnafoux"]
license = "GPL-3.0"
repository = "https://github.com/r3dlight/keysas"
default-run = "keysas-admin"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = ["api-all", "updater"] }
ssh-rs = "0.3" 
anyhow = { version = "1.0", features = ["backtrace"] }
async-std = "1.12"
sha2 ="0.10"
regex="1.9"
sqlite = "0.31"
simple_logger = "4"
log = "0.4"
pkcs8 = {version = "0.10", features = ["encryption", "pem"] }
x509-cert = "0.2"
arbitrary = "1.3"
ed25519-dalek = { version = "2", features = ["digest"] }
rand_dl = {package = "rand", version = "0.8"}
rand_core = "0.6"
hex-literal = "0.4"
libc = "0.2"
udev = "0.7"
mbrman = "0.5"
base64 = "0.21"
keysas_lib = { path = "../../keysas_lib" }

[dependencies.oqs]
version = "0.8"
default-features = false
features = ["std", "dilithium"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
