[package]
name = "keysas-admin"
version = "2.5.0"
description = "Keysas stations administration application"
authors = ["Stephane N", "Luc Bonnafoux"]
license = "GPLv3"
repository = "https://github.com/r3dlight/keysas"
edition = "2024"
#rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2"
# App dependencies
ssh-rs = { version = "0.5", features = ["scp"] }
anyhow = { version = "1.0", features = ["backtrace"] }
sqlite = "0.36"
pkcs8 = {version = "0.10", features = ["encryption", "pem"] }
x509-cert = "0.2"
ed25519-dalek = { version = "2", features = ["digest"] }
hex-literal = "0.4"
libc = "0.2"
udev = "0.9"
mbrman = "0.5"
base64 = "0.22"
keysas_lib = { path = "../../keysas_lib" }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
shlex = "1.3.0"

[dependencies.oqs]
version = "0.10"
default-features = false
features = ["std", "dilithium"]
