[package]
name = "keysas-usbfilter-daemon"
version = "0.1.0"
description = "Keysas USB firewall daemon"
authors = ["Luc Bonnafoux", "Stephane N"]
license = "GPL-3.0"
repository = ""
default-run = "keysas-usbfilter-daemon"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = "1.0"
anyhow = "1.0"
simple_logger = "4.1"
log = "0.4"
wchar = "0.11"
mbrman = "0.5"
libc = "0.2"
keysas_lib = { path = "../../keysas_lib" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = { version = "4", default-features = false, features = ["std", "cargo"] }
toml = "0.7"
libmailslot = {path = "../libmailslot"}
x509-cert = "0.2"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_InstallableFileSystems",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem"
]