[package]
name = "keysas-usbfilter-daemon"
version = "0.1.0"
description = "Keysas USB firewall daemon"
authors = ["Luc Bonnafoux", "Stephane N"]
license = "GPL-3.0"
repository = ""
default-run = "keysas-usbfilter-daemon"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = "1.0"
anyhow = "1.0"
log = "0.4"
wchar = "0.11"
mbrman = "0.5"
libc = "0.2"
keysas_lib = { path = "../../keysas_lib" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = { version = "4", default-features = false, features = ["std", "cargo"] }
toml = "0.8"
x509-cert = "0.2"
cfg-if = "1.0"
base64 = "0.21"
oqs = { version = "0.9", default-features = false, features =["dilithium"] }
ed25519-dalek = "2"

[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.8"
simple_logger = "4.1"
aya = "0.11"
aya-log = "0.1"
tokio = "1.34"
zbus_polkit = "3.0"
zbus = "3.14"

[target.'cfg(target_os = "windows")'.dependencies]
libmailslot = {path = "../libmailslot"}
windows-service = "0.6"
eventlog = "0.2"
registry = "1.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_InstallableFileSystems",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem"
]