[package]
name = "libmailslot"
version = "0.1.0"
edition = "2021"
description = "Windows mailslot wrapper library"
authors = ["Luc Bonnafoux", "Stephane N"]
license = "GPL-3.0"
repository = ""

[dependencies]
anyhow = "1.0"
libc = "0.2"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Mailslots",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
    "Win32_System_IO"
]