[package]
name = "keysas-usbfilter-trayapp"
version = "0.0.0"
description = "Keysas USB firewall tray application"
authors = ["Luc Bonnafoux", "Stephane N"]
license = "GPL-3.0"
repository = ""
default-run = "keysas-usbfilter-trayapp"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2.5", features = ["notification-all", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
# Bumped down simple logger version to avoid conflict with time dependency of tauri
simple_logger = "4.1"
log = "0.4"
libmailslot = {path = "../../libmailslot"}

[dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
